testfx/errors/error_tests/edge_12_strict_equal.fx
// 测试: 使用 === 严格等于
x := 10
if (x === 10) {
    println("equal")
}
